# rec_sys

./: .gitignore  ML Systems Data Modeling Records.docx  README.md  actual.csv  actual_matrix.csv  pyproject.toml  reported.csv  reported_matrix.csv
docs/: architecture_notes.md  poster_outline.docx  poster_outline.md  project_description.docx  project_description.md  recommendation_methods_report.docx  recommendation_methods_report.md
fedsys/: .gitignore  ADVERSARIAL.md  ANALYSIS.md  BPR.md  CODE.md  EVAL.md  FLOW.md  README.md  requirements.txt
fedsys/analysis/: analyze_logs.py
fedsys/fedsys/: __init__.py  config.py  interceptors.py  logging_async.py  privacy.py
fedsys/fedsys/adversarial/: __init__.py  eval.py
fedsys/fedsys/coordinator/: aggregator.py  evaluator.py  registry.py  server.py
fedsys/fedsys/data/: amazon_dataset.py  movielens_dataset.py  synthetic_dataset.py
fedsys/fedsys/models/: bpr.py  neural_cf.py  recommendation.py  simple.py  two_tower.py
fedsys/proto/: federated.proto
fedsys/recsys/: __init__.py  data.py
fedsys/scripts/: _test_simple.py  generate_proto.py  generate_synthetic_data.py  run_coordinator.py  run_gpu_matrix_benchmark.py  run_node.py
fedsys/tests/: common.py
recsys/: device.py  metrics.py  train.py
recsys/federated/: benchmark.py  eval.py
scripts/: build_project_docs_docx.py  build_report_docx.py  plot_federated_report_curves.py  run_ml32m_ablations.sh
tests/: __init__.py  federated_fixture.py  test_data.py  test_device.py  test_federated_attack.py  test_federated_movielens.py  test_training_smoke.py
(+31 files in other folders)
